--- a/index.html
+++ b/index.html
@@ -6,20 +6,25 @@
     <title>Cordel Moderno</title>
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/responsiva.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="src/imagens/icone.png" type="image/x-icon">
+    <script src="src/js/topo.js" defer></script>
 </head>
 <body>
+
     <header>
         <h1>
             Cordel Moderno
         </h1>
+
         <p>
             Por <a href="https://www.recantodasletras.com.br/poesias/3186743" rel="external" target="_blank">Milton Duarte</a>
         </p>
     </header>
+
     <main>
         <section class="normal">
             <p>
@@ -32,6 +37,7 @@
                 Vou dizer tudo em poesia.
             </p>
         </section>
+
         <section class="imagem" id="img01">
             <p>
                 Não é mais como era antes <br>
@@ -43,6 +49,7 @@
                 E um coração desenhado.
             </p>
         </section>
+
         <section class="normal">
             <p>
                 Arroba agora não pesa <br>
@@ -64,6 +71,7 @@
                 Decifre esse rabisco.
             </p>
         </section>
+
         <section class="imagem" id="img02">
             <p>
                 Tenho saudade das cartas <br>
@@ -75,6 +83,7 @@
                 Nas linhas do coração.
             </p>
         </section>
+
         <section class="normal">
             <p>
                 Agora, escrevo e envio <br>
@@ -97,10 +106,21 @@
             </p>
         </section>
     </main>
+    
     <footer>
+
+        <span class="material-symbols-outlined sr-only" id="topo" aria-hidden="true" tabindex="0">
+            keyboard_double_arrow_up
+        </span>
+
         <p>
-            Página criada por <a href="https://github.com/Enne-Amore" rel="external" target="_blank">Enne Jim Pessoa</a>
+            Fontes, imagens, vídeo e textos fornecidos por Gustavo Guanabara e sua equipe a fim de fazer o site para o <a href="https://www.youtube.com/@CursoemVideo" aria-label="Canal do Curso em Vídeo do Gustavo Guanabara" rel="external" target="_blank">Curso em Video.</a>
+        </p>
+
+        <p>
+            Desafio proposto por <a href="https://github.com/gustavoguanabara" aria-label="Conta do professor Guanabara do GitHub" target="_blank" rel="external"> Gustavo Guanabara</a> e concluído por <a href="https://github.com/Enne-Amore" aria-label="Minha conta do GitHub" target="_blank" rel="external">Enne Jim Pessoa.</a>
         </p>
     </footer>
+
 </body>
 </html>
