--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordel Moderno</title>
+    <link rel="shortcut icon" href="src/imagens/icone.png" type="image/x-icon">
+    <!-- CSS -->
+    <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/responsiva.css">
+    <!-- Fontes -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="src/imagens/icone.png" type="image/x-icon">
+    <!-- JavaScript -->
     <script src="src/js/topo.js" defer></script>
 </head>
 <body>
-
     <header>
         <h1>
             Cordel Moderno
@@ -108,7 +111,6 @@
     </main>
     
     <footer>
-
         <span class="material-symbols-outlined sr-only" id="topo" aria-hidden="true" tabindex="0">
             keyboard_double_arrow_up
         </span>
@@ -121,6 +123,5 @@
             Desafio proposto por <a href="https://github.com/gustavoguanabara" aria-label="Conta do professor Guanabara do GitHub" target="_blank" rel="external"> Gustavo Guanabara</a> e concluído por <a href="https://github.com/Enne-Amore" aria-label="Minha conta do GitHub" target="_blank" rel="external">Enne Jim Pessoa.</a>
         </p>
     </footer>
-
 </body>
 </html>
